Downgrading removing record